--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -7,9 +7,9 @@
 <body>
 <h1>Guitar Store</h1>
 
-<p>Play them, love them, sell them and remember real musicians play bass.</p>
+<p>Buy them, play them and love them, but remember real musicians play bass.</p>
 
-<img src="http://orig04.deviantart.net/fcc1/f/2007/037/a/1/insane_guitars_by_yeyeah37.jpg">
+<img width="600", height="auto" src="http://orig04.deviantart.net/fcc1/f/2007/037/a/1/insane_guitars_by_yeyeah37.jpg">
 
 </body>
 </html>
